feat: added markup in html and some properties of basic layout

--- a/index.html
+++ b/index.html
@@ -13,6 +13,40 @@
 
 </head>
 <body class="container">
-    Test Text
+    <div class="sidebar">
+        sidebar
+    </div>
+
+    <header class="header">
+        header
+    </header>
+
+    <div class="realtors">
+        Top 3 realtors
+    </div>
+
+    <section class="features">
+        Features
+    </section>
+
+    <div class="story__pictures">
+        story pictures
+    </div>
+
+    <div class="story__content">
+        story content
+    </div>
+
+    <section class="homes">
+        Homes
+    </section>
+
+    <section class="gallery">
+        gallery
+    </section>
+
+    <footer class="footer">
+        footer
+    </footer>
 </body>
 </html>
