--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </svg>
                 <p>$1,200,000</p>
             </div>
-            <button class="cta">Contact realtor</button>
+            <button class="btn home__btn">Contact realtor</button>
         </div>
 
         
@@ -155,7 +155,7 @@
                 </svg>
                 <p>$2,750,000</p>
             </div>
-            <button class="cta">Contact realtor</button>
+            <button class="btn home__btn">Contact realtor</button>
         </div>
 
 
@@ -189,7 +189,7 @@
                 </svg>
                 <p>$850,000</p>
             </div>
-            <button class="cta">Contact realtor</button>
+            <button class="btn home__btn">Contact realtor</button>
         </div>
 
 
@@ -223,7 +223,7 @@
                 </svg>
                 <p>$1,950,000</p>
             </div>
-            <button class="cta">Contact realtor</button>
+            <button class="btn home__btn">Contact realtor</button>
         </div>
 
 
@@ -257,7 +257,7 @@
                 </svg>
                 <p>$9,500,000</p>
             </div>
-            <button class="cta">Contact realtor</button>
+            <button class="btn home__btn">Contact realtor</button>
         </div>
 
 
@@ -291,7 +291,7 @@
                 </svg>
                 <p>$600,000</p>
             </div>
-            <button class="cta">Contact realtor</button>
+            <button class="btn home__btn">Contact realtor</button>
         </div>
     </section>
 
