feat: added the basic grid layout for gallery section and styled a single image

--- a/index.html
+++ b/index.html
@@ -296,7 +296,11 @@
     </section>
 
     <section class="gallery">
-        gallery
+
+        <figure class="gallery__item gallery__item--1"> <!--to make object fit work we need to add all these image elements to a parent container and add object fit to that parent element-->
+            <img src="images/gal-1.jpeg" alt="Gallery image 1" class="gallery__img">
+        </figure>
+
     </section>
 
     <footer class="footer">
