--- a/index.html
+++ b/index.html
@@ -18,7 +18,17 @@
     </div>
 
     <header class="header">
-        header
+        <img src="images/logo.png" alt="Nexter logo" class="header__logo">
+        <h3 class="heading-3">Your own home:</h3>
+        <h1 class="heading-1">The ultimate personal freedom</h1>
+        <button class="btn header__btn">View our properties</button>
+        <div class="header__seenon-text">Seen on</div>
+        <div class="header__seenon-logos">
+            <img src="images/logo-bbc.png" alt="Seen on logo 1">
+            <img src="images/logo-forbes.png" alt="Seen on logo 2">
+            <img src="images/logo-techcrunch.png" alt="Seen on logo 3">
+            <img src="images/logo-bi.png" alt="Seen on logo 4">
+        </div>
     </header>
 
     <div class="realtors">
